--- a/styles-extremo.css
+++ b/styles-extremo.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background: black;
     color: white;
@@ -5,40 +11,40 @@ body {
 
 h1 {
     font-size: 50px;
-    position: absolute;
-    left: 530px;
-    top: 20px;
+    width: 310px;
+    position: relative;
+    margin: 20px auto;
     z-index: 1;
 }
 
 h2 {
     font-size: 50px;
-    position: absolute;
-    left: 425px;
-    top: 250px;
+    text-align: center;
+    margin: 0 auto 20px;
+    width: 327px;
+    position: relative;
     z-index: 1;
 }
 
 p {
     font-size: 25px;
-    position: absolute;
-    top: 150px;
-    left: 50px;
+    width: 500px;
+    position: relative;
+    margin: 0 auto 20px;
     text-align: center;
     z-index: 1;
 }
 
 button {
-    position: absolute;
-    left: 750px;
-    top: 430px;
+    position: relative;
+    left: 210px;
+    top: -16px;
     width: 100px;
     border: none;
     border-radius: 5px;
     z-index: 1;
     background: #b4aeae;
     cursor: pointer;
-    transition: 0.5s;
     box-shadow: 0px 0px 20px 0px #b4aeae;
 }
 
@@ -51,9 +57,9 @@ input {
     background: #b4aeae;
     border: none;
     border-radius: 5px;
-    position: absolute;
-    top: 430px;
-    left: 550px;
+    position: relative;
+    top: 0;
+    left: 0;
     z-index: 1;
     width: 117px;
 }
@@ -66,24 +72,27 @@ input {
 }
 
 .painel {
-    top: 390px;
-    left: 500px;
-    width: 400px;
-    height: 300px;
-    position: absolute;
+    width: 350px;
+    height: 230px;
+    position: relative;
+    padding: 20px;
+    margin: 0 auto;
     background: #404040;
     border: none;
     border-radius: 10px;
 }
 
 .botao-4 {
-    position: absolute;
-    top: 620px;
-    left: 645px;
+
+    position: relative;
+    margin: 0 auto;
+    top: 0;
+    left: 0;
     cursor: pointer;
     background: white;
     box-shadow: 0px 0px 20px 0px white;
     z-index: 1;
+    display: none;
 }
 
 .botao-4:hover {
@@ -97,23 +106,27 @@ input {
 .p2 {
     /* acertou ou errou*/
     font-size: 20px;
-    top: 520px;
-    left: 530px;
+    width: 290px;
+    position: relative;
+    margin: 0 auto 20px;
+    top: 0;
+    left: 0;
 }
 
 .p3 {
     /* tentativas */
     font-size: 20px;
-    top: 460px;
-    left: 600px;
+    width: 220px;
+    position: relative;
+    margin: 20px auto;
+    top: 0;
+    left: 0;
 }
 
 .container {
     position: relative;
-    /* Para posicionar os pontos dentro dele */
     width: 100%;
-    height: 110vh;
-    /* Altura total da tela */
+    height: 100%;
 }
 
 .point {
@@ -249,110 +262,47 @@ input {
     animation-delay: 9.5s;
 }
 
-@media screen and (max-width: 900px) {
-
-    h1 {
-        left: 260px;
+@media screen and (max-width: 1024px) {
+    
+    body {
+      height: 104vh;
     }
+    
+}
 
+@media screen and (max-width: 515px) {
+    
     p {
-        left: 10px;
+        width: auto;
     }
-
-    h2 {
-        left: 157px;
-        width: 600px;
-    }
-
-    input {
-        left: 270px;
-    }
-
-    button {
-        left: 490px;
-    }
-
-    .painel {
-        left: 230px;
-    }
-
-    .botao-4 {
-        left: 387px;
-    }
-
-    .p2 {
-        left: 300px;
-    }
-
-    .p3 {
-        left: 350px;
-    }
-
+    
 }
 
 @media screen and (max-width: 500px) {
-
-    h1 {
-       font-size: 30px;
-        width: 200px;
-        left: 115px;
-        margin: 0;
+    
+    body {
+       height: 110vh;
     }
+    
+}
 
-    p {
-       font-size: 15px;
-        width: 300px;
-        top: 100px;
-        left: 47px;
-        margin: 0;
-    }
-
+@media screen and (max-width: 365px) {
+    
     h2 {
-        text-align: center;
-        font-size: 30px;
-        top: 205px;
-        left: 105px;
-        width: 200px;
-        margin: 0;
+        width: auto;
     }
+    
+.painel {
+    width: auto;
+}
 
-    input {
-        top: 360px;
-        left: 55px;
-        width: 105px;
-    }
+}
 
-    button {
-        top: 360px;
-        left: 239px;
-    }
+@media  screen and (max-width: 345px) {
+    
+button {
+    left: 190px;
 
-    .painel {
-        width: 330px;
-        top: 310px;
-        left: 30px;
-    }
-
-    .botao-4 {
-        top: 535px;
-        left: 150px;
-    }
-
-   .p2 {
-        top: 465px;
-        left: 46px;
-        width: 300px;
-    }
-
-    .p3 {
-        top: 410px;
-        left: 100px;
-        width: 200px;
-    }
-
-    .container {
-        height: 110vh;
-        width: 97vw;
-    }
+}
 
 }
