--- a/styles-facil.css
+++ b/styles-facil.css
@@ -1,29 +1,36 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background: black;
     color: white;
 }
 
 h1 {
-    font-size: 50px;
-    position: absolute;
-    left: 550px;
-    top: 20px;
+   font-size: 50px;
+    width: 230px;
+    position: relative;
+    margin: 20px auto;
     z-index: 1;
 }
 
 h2 {
-    font-size: 50px;
-    position: absolute;
-    left: 425px;
-    top: 250px;
+ font-size: 50px;
+    text-align: center;
+    width: 327px;
+    position: relative;
+    margin: 0 auto 20px auto;
     z-index: 1;
 }
 
 p {
     font-size: 25px;
-    position: absolute;
-    top: 150px;
-    left: 100px;
+    width: 623px;
+    position: relative;
+    margin: 0 auto 20px auto;
     text-align: center;
     z-index: 1;
 }
@@ -33,20 +40,19 @@ span {
 }
 
 input {
-    background: #b4aeae;
+   background: #b4aeae;
     border: none;
     border-radius: 5px;
-    position: absolute;
-    top: 430px;
-    left: 550px;
+    position: relative;
+    margin-left: 20px;
     width: 117px;
     z-index: 1;
 }
 
 button {
-    position: absolute;
-    left: 700px;
-    top: 430px;
+ position: relative;
+    left: 190px;
+    top: -16px;
     width: 100px;
     border: none;
     border-radius: 5px;
@@ -65,11 +71,11 @@ button {
 }
 
 .painel {
-    top: 390px;
-    left: 500px;
-    width: 350px;
-    height: 300px;
-    position: absolute;
+  width: 350px;
+    height: 230px;
+    position: relative;
+    margin: 0 auto;
+    padding: 20px;
     background: #404040;
     border: none;
     border-radius: 10px;
@@ -77,26 +83,34 @@ button {
 
 .p2 {
     /* acertou ou errou*/
+ position: relative;
+    margin: 15px auto 15px auto;
+    top: 0;
+    left: 0;
     font-size: 20px;
-    top: 520px;
-    left: 530px;
+    width: 270px;
 }
 
 .p3 {
     /* tentativas */
+   position: relative;
+    margin: 20px auto 0 auto;
+    top: 0;
+    left: 0;
     font-size: 20px;
-    top: 460px;
-    left: 585px;
+    width: 180px;
 }
 
 .botao-1 {
-    position: absolute;
-    top: 620px;
-    left: 633px;
+    position: relative;
+    margin: 0 auto 0 auto;
+    top: 0px;
+    left: 0px;
     cursor: pointer;
     background: #fcff00;
     box-shadow: 0px 0px 20px 0px #fcff00;
     z-index: 1;
+    display: none;
 }
 
 .botao-1:hover {
@@ -108,11 +122,8 @@ button {
 }
 
 .container {
-    position: relative;
-    /* Para posicionar os pontos dentro dele */
     width: 100%;
-    height: 110vh;
-    /* Altura total da tela */
+    height: 100%;
 }
 
 .point {
@@ -248,107 +259,34 @@ button {
     animation-delay: 9.5s;
 }
 
-@media screen and (max-width: 900px) {
-
-    h1 {
-        left: 310px;
-    }
-
+@media screen and (max-width: 638px) {
+   
     p {
-        left: 10px;
+        width: auto;
     }
-
-    h2 {
-        left: 160px;
-        width: 600px;
-    }
-
-    input {
-        left: 300px;
-    }
-
-    button {
-        left: 475px;
-    }
-
-    .painel {
-        left: 260px;
-    }
-
-    .botao-1 {
-        left: 387px;
-    }
-
-    .p2 {
-        left: 290px;
-    }
-
-    .p3 {
-        left: 350px;
-    }
-
+    
 }
 
 @media screen and (max-width: 500px) {
 
-    h1 {
-        font-size: 30px;
-        width: 140px;
-        left: 140px;
-        margin: 0;
-    }
-
-    p {
-        font-size: 15px;
-        width: 300px;
-        top: 100px;
-        left: 47px;
-        margin: 0;
-    }
-
-    h2 {
-        text-align: center;
-        font-size: 30px;
-        width: 200px;
-        top: 215px;
-        left: 100px;
-        margin: 0;
-    }
-
-    input {
-        top: 360px;
-        left: 55px;
-        width: 105px;
-    }
-
-    button {
-        top: 360px;
-        left: 240px;
-    }
-
-    .painel {
-        top: 315px;
-        left: 22px;
-    }
-
-    .botao-1 {
-        top: 535px;
-        left: 155px;
-    }
-
-    .p2 {
-        top: 465px;
-        left: 45px;
-    }
-
-    .p3 {
-        top: 410px;
-        left: 45px;
-    }
-
-    .container {
+    body {
         height: 110vh;
-        width: 90vw;
     }
+    
+}
 
+@media screen and (max-width: 365px) {
+    
+.painel {
+    width: auto;
+}
+
+}
+
+@media screen and (max-width: 342px) {
+   
+    h2 {
+        width: auto;
+    }
+    
 }
