--- a/styles-medio.css
+++ b/styles-medio.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background: black;
     color: white;
@@ -5,25 +11,26 @@ body {
 
 h1 {
     font-size: 50px;
-    position: absolute;
-    left: 550px;
-    top: 20px;
+    width: 260px;
+    position: relative;
+    margin: 20px auto;
     z-index: 1;
 }
 
 h2 {
     font-size: 50px;
-    position: absolute;
-    left: 425px;
-    top: 250px;
+    text-align: center;
+    width: 327px;
+    position: relative;
+    margin: 0 auto 20px;
     z-index: 1;
 }
 
 p {
     font-size: 25px;
-    position: absolute;
-    top: 150px;
-    left: 80px;
+    width: 486px;
+    position: relative;
+    margin: 0 auto 20px;
     text-align: center;
     z-index: 1;
 }
@@ -36,17 +43,15 @@ input {
     background: #b4aeae;
     border: none;
     border-radius: 5px;
-    position: absolute;
-    top: 430px;
-    left: 550px;
+    position: relative;
     width: 117px;
     z-index: 1;
 }
 
 button {
-    position: absolute;
-    left: 700px;
-    top: 430px;
+   position: relative;
+    left: 210px;
+    top: -16px;
     width: 100px;
     border: none;
     border-radius: 5px;
@@ -65,11 +70,11 @@ button {
 }
 
 .painel {
-    top: 390px;
-    left: 500px;
-    width: 350px;
-    height: 300px;
-    position: absolute;
+  width: 350px;
+    height: 240px;
+    position: relative;
+    padding: 20px;
+    margin: 0 auto;
     background: #404040;
     border: none;
     border-radius: 10px;
@@ -77,26 +82,33 @@ button {
 
 .p2 {
     /* acertou ou errou*/
-    font-size: 20px;
-    top: 520px;
-    left: 530px;
+   font-size: 20px;
+    width: 310px;
+    position: relative;
+    margin: 0 auto 20px;
+    left: 0;
 }
 
 .p3 {
     /* tentativas */
     font-size: 20px;
-    top: 460px;
-    left: 585px;
+    width: 220px;
+    position: relative;
+    margin: 20px auto;
+    top: 0;
+    left: 0;
 }
 
 .botao-2 {
-    position: absolute;
-    top: 620px;
-    left: 633px;
+    position: relative;
+    margin: 0 auto;
+    top: 0;
+    left: 0;
     cursor: pointer;
     background: #ff0000;
     box-shadow: 0px 0px 20px 0px #ff0000;
     z-index: 1;
+    display: none;
 }
 
 .botao-2:hover {
@@ -109,10 +121,8 @@ button {
 
 .container {
     position: relative;
-    /* Para posicionar os pontos dentro dele */
     width: 100%;
-    height: 110vh;
-    /* Altura total da tela */
+    height: 100%;
 }
 
 .point {
@@ -248,107 +258,34 @@ button {
     animation-delay: 9.5s;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1024px) {
+   
+   body {
+    height: 62vh;
+   }
+    
+}
 
-    h1 {
-        left: 310px;
-    }
-
+@media screen and (max-width: 501px) {
+   
     p {
-        left: 10px;
+        width: auto;
     }
+    
+}
 
-    h2 {
-        left: 160px;
-        width: 600px;
-    }
-
-    input {
-        left: 300px;
-    }
-
-    button {
-        left: 475px;
-    }
-
-    .painel {
-        left: 260px;
-    }
-
-    .botao-2 {
-        left: 387px;
-    }
-
-    .p2 {
-        left: 290px;
-    }
-
-    .p3 {
-        left: 350px;
+@media screen and (max-width: 500px) {
+   
+    body {
+     height: 45vh;
     }
 
 }
 
-@media screen and (max-width: 500px) {
-
-   h1 {
-        font-size: 30px;
-        width: 160px;
-        left: 130px;
-        margin: 0;
-    }
-
-    p {
-        font-size: 15px;
-        width: 300px;
-        top: 100px;
-        left: 47px;
-        margin: 0;
-    }
-
+@media screen and (max-width: 365px) {
+   
     h2 {
-        text-align: center;
-        font-size: 30px;
-        width: 200px;
-        top: 215px;
-        left: 100px;
-        margin: 0;
+        width: auto;
     }
-
-    input {
-        top: 360px;
-        left: 55px;
-        width: 105px;
-    }
-
-    button {
-        top: 360px;
-        left: 240px;
-    }
-
-    .painel {
-        top: 315px;
-        left: 22px;
-    }
-
-    .botao-2 {
-        top: 535px;
-        left: 155px;
-    }
-
-    .p2 {
-        top: 465px;
-        left: 45px;
-    }
-
-    .p3 {
-        top: 410px;
-        left: 45px;
-    }
-
-    .container {
-        height: 110vh;
-        width: 97vw;
-    }
-
+    
 }
