--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background: #000000;
     color: #ffffff;
-    margin: 0;
-
 }
 
 .caixa-texto {
@@ -11,30 +15,34 @@ body {
 
 h1 {
     font-size: 50px;
-    position: absolute;
-    left: 350px;
-    top: 20px;
+    position: relative;
+    margin: 20px auto;
+    width: 442px;
+    text-align: center;
     z-index: 1;
 }
 
 p {
-    position: absolute;
+    position: relative;
+    margin: 0 auto 20px auto;
     font-size: 25px;
-    top: 140px;
-    left: 20px;
+    width: 800px;
     text-align: center;
     z-index: 1;
 }
 
 h2 {
     font-size: 30px;
-    position: absolute;
-    top: 230px;
-    left: 475px;
+    position: relative;
+    margin: 0 auto 20px auto;
+    width: 376px;
     z-index: 1;
 }
 
 button {
+    position: relative;
+    margin: 20px auto 0 auto;
+    display: block;
     font-size: 30px;
     cursor: pointer;
     border: none;
@@ -44,16 +52,14 @@ button {
 
 .container {
     position: relative;
-    /* Para posicionar os pontos dentro dele */
     width: 100%;
-    height: 140vh;
-    /* Altura total da tela */
+    height: 100%;
 }
 
 .point {
     position: absolute;
     /* Para poder mover os pontos livremente */
-    bottom: 0px;
+    bottom: 0;
     /* Começar na parte de baixo */
     width: 10px;
     /* Largura do ponto */
@@ -184,9 +190,6 @@ button {
 }
 
 .botao1 {
-    position: absolute;
-    top: 320px;
-    left: 600px;
     width: 150px;
     height: 100px;
     background: #00ff00;
@@ -203,9 +206,6 @@ button {
 }
 
 .botao2 {
-    position: absolute;
-    top: 440px;
-    left: 600px;
     width: 150px;
     height: 100px;
     background: #fcff00;
@@ -222,9 +222,6 @@ button {
 }
 
 .botao3 {
-    position: absolute;
-    top: 560px;
-    left: 600px;
     width: 150px;
     height: 100px;
     background: #ff0000;
@@ -241,9 +238,7 @@ button {
 }
 
 .botao4 {
-    position: absolute;
-    top: 680px;
-    left: 600px;
+    margin-bottom: 20px;
     width: 150px;
     height: 100px;
     background: #771e75;
@@ -266,103 +261,69 @@ button {
     top: 5px;
 }
 
-@media screen and (max-width: 900px) {
-    h1 {
-        left: 100px;
-        width: 700px;
-        text-align: center;
-    }
 
-    p {
-        top: 200px;
-        left: 200px;
-        width: 500px;
-    }
+@media screen and (max-width: 1024px) {
 
-    h2 {
-        position: absolute;
-        top: 370px;
-        left: 250px;
-        width: 400px;
-    }
-
-    .botao1 {
-        top: 500px;
-        left: 380px;
-    }
-
-    .botao2 {
-        top: 620px;
-        left: 380px;
-    }
-
-    .botao3 {
-        top: 740px;
-        left: 380px;
-    }
-
-    .botao4 {
-        left: 380px;
-        top: 860px;
-    }
-
-    .container {
-        height: 150vh;
-        width: 100vw;
+    body {
+        height: 61vh;
     }
 
 }
 
-@media screen and (max-width: 500px) {
-    h1 {
-        font-size: 30px;
-        top: 40px;
-        left: 45px;
-        width: 300px;
-        text-align: center;
-        margin: 0;
+@media screen and (max-width: 900px) {
+
+    body {
+        height: 54vh;
     }
+
+}
+
+
+@media screen and (max-width: 815px) {
 
     p {
-        font-size: 15px;
-        top: 170px;
-        left: 50px;
-        width: 300px;
-        margin: 0;
+        width: auto;
     }
+
+}
+
+@media screen and (max-width: 457px) {
+
+    h1 {
+        width: auto;
+    }
+
+}
+
+@media screen and (max-width: 400px) {
+
+    body {
+        height: 50vh;
+    }
+
+}
+
+@media screen and (max-width: 391px) {
 
     h2 {
-       font-size: 30px;
-        top: 300px;
-        left: 50px;
-        width: 300px;
+        width: auto;
         text-align: center;
-        margin: 0;
     }
 
-    .botao1 {
-        top: 400px;
-        left: 124px;
+}
+
+@media screen and (max-width: 380px) {
+
+    body {
+        height: 45vh;
     }
 
-    .botao2 {
-        top: 520px;
-        left: 124px;
-    }
+}
 
-    .botao3 {
-        top: 640px;
-        left: 124px;
-    }
+@media screen and (max-width: 370px) {
 
-    .botao4 {
-        top: 760px;
-        left: 124px;
-    }
-
-    .container {
-        height: 140vh;
-        width: 100vw;
+    body {
+        height: 32vh;
     }
 
 }
