--- a/styles-dificil.css
+++ b/styles-dificil.css
@@ -11,7 +11,8 @@ body {
 
 h1 {
     font-size: 50px;
-    width: 255px;
+    text-align: center;
+    width: auto;
     position: relative;
     margin: 20px auto;
     z-index: 1;
@@ -20,7 +21,7 @@ h1 {
 h2 {
     font-size: 50px;
     text-align: center;
-    width: 327px;
+    width: auto;
     position: relative;
     margin: 0 auto 20px;
     z-index: 1;
@@ -122,10 +123,10 @@ input {
 }
 
 @media screen and (max-width: 1024px) {
-    
-body {
-   height: 105vh;
-}
+
+    body {
+        height: 105vh;
+    }
 
 }
 
@@ -140,9 +141,9 @@ body {
 @media screen and (max-width: 500px) {
 
     body {
-       height: 110vh;
+        height: 110vh;
     }
-    
+
 }
 
 @media screen and (max-width: 425px) {
