--- a/styles-extremo.css
+++ b/styles-extremo.css
@@ -11,7 +11,8 @@ body {
 
 h1 {
     font-size: 50px;
-    width: 310px;
+    text-align: center;
+    width: auto;
     position: relative;
     margin: 20px auto;
     z-index: 1;
@@ -21,7 +22,7 @@ h2 {
     font-size: 50px;
     text-align: center;
     margin: 0 auto 20px;
-    width: 327px;
+    width: auto;
     position: relative;
     z-index: 1;
 }
@@ -124,46 +125,46 @@ input {
 }
 
 @media screen and (max-width: 1024px) {
-    
+
     body {
-      height: 104vh;
+        height: 104vh;
     }
-    
+
 }
 
 @media screen and (max-width: 515px) {
-    
+
     p {
         width: auto;
     }
-    
+
 }
 
 @media screen and (max-width: 500px) {
-    
+
     body {
-       height: 110vh;
+        height: 110vh;
     }
-    
+
 }
 
 @media screen and (max-width: 365px) {
-    
+
     h2 {
         width: auto;
     }
-    
-.painel {
-    width: auto;
-}
+
+    .painel {
+        width: auto;
+    }
 
 }
 
-@media  screen and (max-width: 345px) {
-    
-button {
-    left: 190px;
+@media screen and (max-width: 345px) {
 
-}
+    button {
+        left: 190px;
+
+    }
 
 }
