--- a/styles-medio.css
+++ b/styles-medio.css
@@ -11,7 +11,8 @@ body {
 
 h1 {
     font-size: 50px;
-    width: 260px;
+    text-align: center;
+    width: auto;
     position: relative;
     margin: 20px auto;
     z-index: 1;
@@ -20,7 +21,7 @@ h1 {
 h2 {
     font-size: 50px;
     text-align: center;
-    width: 327px;
+    width: auto;
     position: relative;
     margin: 0 auto 20px;
     z-index: 1;
@@ -49,7 +50,7 @@ input {
 }
 
 button {
-   position: relative;
+    position: relative;
     left: 210px;
     top: -16px;
     width: 100px;
@@ -70,7 +71,7 @@ button {
 }
 
 .painel {
-  width: 350px;
+    width: 350px;
     height: 240px;
     position: relative;
     padding: 20px;
@@ -82,7 +83,7 @@ button {
 
 .p2 {
     /* acertou ou errou*/
-   font-size: 20px;
+    font-size: 20px;
     width: 310px;
     position: relative;
     margin: 0 auto 20px;
@@ -120,33 +121,19 @@ button {
 }
 
 @media screen and (max-width: 1024px) {
-   
-   body {
-   height: 105vh;
-   }
-    
+    body {
+        height: 105vh;
+    }
 }
 
 @media screen and (max-width: 501px) {
-   
     p {
         width: auto;
     }
-    
 }
 
 @media screen and (max-width: 500px) {
-   
     body {
-    height: 110vh;
+        height: 110vh;
     }
-
-}
-
-@media screen and (max-width: 365px) {
-   
-    h2 {
-        width: auto;
-    }
-    
 }
